--- a/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
@@ -178,6 +178,9 @@
           box-shadow: 3px 3px 3px -3px rgba(0, 0, 0, 0.25)
           display: none
 
+        ul[role=button]
+          display: inherit
+
         > a:not([role=button])
           +color($background)
           text-decoration: none
