Changing a bit of the hierarchy of pages

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -5,10 +5,9 @@
         li.navbar-title
           img.logo(src="/img/kickstart-black.png")
           button(role="button") =
-        li
-          a(href="/") Home
-        li
-          a(href="/docs/#{docsVersion}/") Docs
+        li: a(href="/") Home
+        li: a(href="/docs/#{docsVersion}/") Docs
+        li: a(href="/about/") About
 
       ul
         li
