--- a/lib/jade/docs/3.x/ui/index.jade
+++ b/lib/jade/docs/3.x/ui/index.jade
@@ -106,7 +106,7 @@ block fullPane
     <span class="ifnot-semantic">add `#screen` to</span>
     an element just below the `<body>`.
 
-  p.alert.alert-info 
+  .alert.alert-info 
     :markdown
       # Why not use the body?
       
