--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -8,6 +8,7 @@
   background: $background
   box-shadow: 0px 1px 0px darken($background, 12%) inset
   font-size: $default-font-size
+  margin-bottom: $space
 
   nav
     width: 100%
