--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -4,13 +4,17 @@
   @else
     color: rgba(0, 0, 0, 0.5)
 
-=navbar-default($bleed-container: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+=navbar-default($fluid: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   background: $background
   box-shadow: 0px 1px 0px darken($background, 12%) inset
   font-size: $default-font-size
   margin-bottom: $space
 
   nav
+    @if $fluid == true
+      +container(true)
+    @else
+      +container
     width: 100%
     border-radius: 0
     position: relative
@@ -42,7 +46,7 @@
       margin: 0
 
     @media screen and (min-width: $breakpoint)
-      @if ($bleed-container)
+      @if $fluid == false
         > ul:first-child
           margin-left: (-1 * map-get($rootElement, paddingH))
 
@@ -74,9 +78,10 @@
         border-radius: 0
         padding: (map-get($rootElement, paddingV) - 1) (map-get($rootElement, paddingH))
         position: relative
-        margin: 
+        margin:
           left: (-1 * map-get($rootElement, paddingH))
           right: (-1 * map-get($rootElement, paddingH))
+        user-select: none
 
         @media screen and (min-width: $breakpoint)
           margin: 0
@@ -98,7 +103,7 @@
             color: inherit
             display: block
             margin-bottom: 0
-            font-family: Kickstart, 'Kickstart' 
+            font-family: Kickstart, 'Kickstart'
             padding:
               left: 0
               right: 0
@@ -169,7 +174,7 @@
                 font-size: 1rem
 
               a:not([role=button])
-                padding: 
+                padding:
                   top: 2 * map-get($rootElement, paddingV)
                   bottom: 2 * map-get($rootElement, paddingV)
 
