--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -99,6 +99,7 @@
 
           button
             +button-default(transparent)
+            background: transparent
             border-color: transparent
             color: inherit
             display: block
