--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -258,8 +258,17 @@
 
 // TABLES
 // ------
-table
+.table
   +table
+
+  &.table-blank
+    +table-blank
+
+  &.table-zebra
+    +table-zebra
+
+  &.table-hover
+    +table-hover
 
 // TILES
 // -----
