--- a/rails/app/assets/stylesheets/kickstart_rails/core/_direct-apply.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_direct-apply.sass
@@ -143,6 +143,7 @@ input[type="file"]::-webkit-file-upload-button
   margin: 10px auto
   transform: translateY(8px)
   z-index: 10
+  +label(map-get($colors, blue))
 
   &:after
     +tooltip_arrow
