--- a/lib/sass/components/_tables.sass
+++ b/lib/sass/components/_tables.sass
@@ -1,4 +1,4 @@
-=table-default
+=table-default($blank: false, $zebra: false, $hover: false)
   border-collapse: collapse
   background: white
   border-spacing: 0
@@ -15,6 +15,8 @@
     color: black
     text-align: left
     vertical-align: bottom
+    border-bottom: 1px solid transparent
+
     th
       font-weight: bold
 
@@ -31,5 +33,32 @@
     &:first-child
       border-left-width: 0
 
-  tbody tr:nth-child(2n)
-    background-color: lighten(map-get($gray, light), 50%)
+  @if $blank == true
+    +table-blank
+
+  @if $zebra == true
+    +table-zebra
+
+=table-blank
+  border-color: transparent
+  table, tr, td, tbody, thead, th, tfoot
+    border-color: transparent
+    background: transparent
+  th, td
+    padding:
+      left: 0px
+      right: 0px
+
+=table-hover
+  tbody, thead
+    tr:hover
+      background-color: map-get($white, darker)
+
+=table-zebra
+  tbody, thead
+    tr:nth-child(even)
+      background-color: map-get($white, dark)
+
+    tr
+      td, th
+        padding: ($space/6) ($space/4)
