--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -205,8 +205,8 @@ hr
 // Table
 // -----
 
-=table()
-  +table-default()
+=table($blank: false, $zebra: false, $hover: false)
+  +table-default($blank, $zebra, $hover)
 
 //
 // Dependent Components
