Updating tables example

--- a/lib/jade/docs/3.x/ui/tables/index.jade
+++ b/lib/jade/docs/3.x/ui/tables/index.jade
@@ -4,15 +4,24 @@ block hero-title
   h1 Tables
 
 block hero-example
-  table
+  table.table.table-zebra
     thead
       tr
-        th Foo
-        th Bar
+        th First
+        th Last
     tbody
       tr
-        td Foo
-        td Bar
+        td John
+        td Doe
+      tr
+        td Jane
+        td Smith
+      tr
+        td Bob
+        td Baker
+      tr
+        td Alex
+        td Thompson
 
 block basic
   :markdown
