--- a/lib/jade/docs/3.x/ui/index.jade
+++ b/lib/jade/docs/3.x/ui/index.jade
@@ -134,7 +134,7 @@ block fullPane
           #main {
             @include above-footer();
           }
-          body {
+          #screen {
             @include screen();
           }
 
