--- a/lib/jade/docs/3.x/theming/index.jade
+++ b/lib/jade/docs/3.x/theming/index.jade
@@ -52,23 +52,6 @@ block fullPane
   h2#rails In Rails
 
   :markdown
-    ### Using an included theme
-
-    If you want to use a theme already included in kickstart, you'll just need
-    to be specific in application.css.sass/scss. 
-
-    Instead of
-
-        @import kickstart_rails
-
-    Use
-
-        @import kickstart_rails/themes/themename
-
-    `themename` is the name of the .sass theme you want to use.
-
-    ### Using your own theme
-
     In a pure sass implementation, you could create your own theme by just
     dropping it in the theme directory. However, because this sits in a vendor
     location and probably (hopefully) not committed to your repo, it should
@@ -77,6 +60,13 @@ block fullPane
 
     Here's how to do this without breaking links.
 
-    1. [Copy one of the themes from the repo](https://github.com/ajkochanowicz/Kickstrap/tree/master/lib/sass/themes)
+    1. If using a theme not included with kickstart, add your theme to assets/stylesheets. 
+       If you want to make one from scratch, you can 
+       also [Copy one of the themes from the repo](https://github.com/ajkochanowicz/Kickstrap/tree/master/lib/sass/themes)
        into assets/stylesheets of your project.  
-    2. Change the `@import`s to point to kickstart_rails...
+    2. In application.css.sass/scss, import that theme and any other of
+       your stylesheets afterwards.
+       - If using a theme included with kickstart, be sure to point to it instead of 
+         kickstart_rails itself. `@import kickstart_rails/themes/themename`
+    3. In your theme, make sure each import is pointing to `kickstart_rails`, not `../`
+       as the base directory.
