--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -25,7 +25,7 @@ $black: (lightest: #444, lighter: #333, light: #222)
 $colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blue: cornflowerblue, violet: darkmagenta)
 
 // Vendor libraries
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic)
+@import url(//fonts.googleapis.com/css?family=Lato:300,400,700,400italic)
 
 // Ten point design variables
 // --------------------------
