Calling tooltips done.

--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -274,29 +274,14 @@ block variations
           <span data-ks-tooltip="I'm on the right" data-ks-tooltip-position="right">right</span>.
         </p>
 
-    ## Multiple tooltips in one trigger
+    ## Combining
 
-    By separating the trigger and the tooltip into separate elements, we can
-    do some pretty cool things, like show multiple tooltips in one trigger
-    area.
-
-  .row
-    .col-6.tooltip_trigger
-      .example
-        ul
-          li
-            a(href="#") 
-              | My account
-              .tooltip.tooltip-green Start here
-          li: a(href="#") Dashboard
-          li: a(href="#") Settings
-          li: a(href="#") Recent
-          li
-            a(href="#") 
-              | Favorites
-              .tooltip.tooltip-left Check back here for items you've favorited.
-          li: a(href="#") Updates
-
-    .col-6.tooltip_trigger
-      .example
+  .example.tooltip_trigger
+    ul
+      li: a(href="#") My account
+      li: a(href="#" data-ks-tooltip="You need to update your profile." data-ks-tooltip-color="red" data-ks-tooltip-position="left") Dashboard
+      li: a(href="#") Settings
+      li: a(href="#") Recent
+      li: a(href="#") Favorites
+      li: a(href="#" data-ks-tooltip-color="blue" data-ks-tooltip-position="bottom" data-ks-tooltip="New updates are waiting for you.") Updates
 
