--- a/lib/sass/components/_tables.sass
+++ b/lib/sass/components/_tables.sass
@@ -39,6 +39,8 @@
   @if $zebra == true
     +table-zebra
 
+  @content
+
 =table-blank
   border-color: transparent
   table, tr, td, tbody, thead, th, tfoot
