--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -36,6 +36,8 @@
   +root-element($size: $size)
   +button-size($size)
 
+  @content
+
 // Separated from main mixin for access by non-semantic library.
 
 =button-color($background-color)
@@ -87,7 +89,7 @@
   + .button-dropdown + ul
     // Button with dropdown
     +button-dropdown-menu
-  
+
   &.button-dropdown
     padding:
       left: map-get($rootElement, paddingV) * $size * $size
@@ -149,3 +151,5 @@
   > li > ul
     +button-dropdown-menu
     display: none
+
+  @content
