--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -6,19 +6,21 @@
   @if not $background-color == false
     .tooltip
       +label($background-color)
- 
+
   &:hover
     [data-ks-tooltip]
       &:after, &:before
         opacity: 1
 
-      &:after 
+      &:after
         transform: translateY(-8px)
         transition: transform 0.25s
 
     .tooltip
       opacity: 1
       transform: translateY(0px)
- 
+
       &:after
         opacity: 1
+
+  @content
