--- a/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
@@ -214,3 +214,5 @@
           &:active
             background: darken($background, 15%)
             border-color: darken($background, 15%)
+
+  @content
