--- a/lib/jade/docs/3.x/ui/typography/index.jade
+++ b/lib/jade/docs/3.x/ui/typography/index.jade
@@ -7,12 +7,12 @@ block basic
   p By default, the standard set of typography tags will look like this:
 
   .example
-    h1 Heading 1
-    h2 Heading 2
-    h3 Heading 3
-    h4 Heading 4
-    h5 Heading 5
-    h6 Heading 6
+    h1.toc-exempt Heading 1
+    h2.toc-exempt Heading 2
+    h3.toc-exempt Heading 3
+    h4.toc-exempt Heading 4
+    h5.toc-exempt Heading 5
+    h6.toc-exempt Heading 6
     p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     p
       em Emphasized
@@ -24,13 +24,13 @@ block variations
   p Font sizes and line-heights are set with responsive sizing based on the viewport width. Try changing the size of this screen or view on a different-sized screen for an example.
 
   h2 Content-optimized
-  p.if-semantic 
+  p.if-semantic
     | To use content-optimized default paragraph text, simply pass in&nbsp;
     code true
     |  to&nbsp;
     code p()
   p.if-semantic Direct descendants will also acquire these styles, so this can be applied to a parent container as well.
-  p.ifnot-semantic 
+  p.ifnot-semantic
     | Classes with&nbsp;
     code .semantic
     |  and their direct descendants will be optimized for content.
@@ -62,7 +62,7 @@ block variations
 
   .example
     header.page-heading
-      h1 How to cook a pie
+      h1.toc-exempt How to cook a pie
     p The first step to cooking a pie is to choose a fancy tin.
 
     :markdown
@@ -80,7 +80,7 @@ block variations
 
   :markdown
     ## Lists
-    
+
     Sometimes bullets are annoying. Kickstart provides a couple ways of displaying unstyled lists:
 
     ### Unstyled vertical
@@ -178,7 +178,7 @@ block variations
             pre.ifnot-semantic
               code &lt;h1 class="#{size}"&gt;Hello World&lt;/h1&gt;
           td
-            h1(class="#{size}") Hello World
+            h1(class="#{size} toc-exempt") Hello World
 
   :markdown
     ## Heros
@@ -213,7 +213,7 @@ block variations
   .if-semantic
     :markdown
       <span>
-       
+
            .hero {
              @include hero();
            }
